--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="logo">
+    <header class="logo" >
         <nav>
-            <h1>LOGO</h1>
+            <h1 style="color: #4E47FF;">LOGO</h1>
             <button>Sign Up</button>
 
         </nav>
-        <h1>
+        <h1 style="color: #252432;">
             Cool Dark UI Template for <br>Webflow Agencies!
 
         </h1>
         <button>Stay Focused</button>
 
     </header>
+
     <main>
+        <div>
+
+        </div>
 
     </main>
-    <footer>
+    <footer style="background-color: #FFFFFF;">
+        <h1 style="color: #4E47FF;">LOGO</h1>
+        <div><h6 style="text-align: center;">Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</h6>
+            <ul class="home">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How it Works</a></li>
+                <li><a href="">Services</a></li>
+            </ul>
+        </div>
 
     </footer>
     
