--- a/index.html
+++ b/index.html
@@ -22,15 +22,28 @@
     </header>
 
     <main>
+        <div class="it">
+            <div><h3>See It in Action</h3>
+            <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+            <button>Launch Live Preview</button>
+        </div>
+            <div><img src="./Assets/wc-mini.png" alt="">
+</div>
+        </div>
         <div>
+            <h3>Joined Thousands of Productive Users</h3>
 
+
+        </div>
+        <div>
+            <h3 style="text-align: center;">What our users say</h3>
         </div>
 
     </main>
     <footer style="background-color: #FFFFFF;">
         <h1 style="color: #4E47FF;">LOGO</h1>
         <div><h6 style="text-align: center;">Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</h6>
-            <ul class="home">
+            <ul class="home" >
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">How it Works</a></li>
