--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
         <div>
             <h3 style="text-align: center;">What our users say</h3>
         </div>
+        <div style="text-align: center;">
+            <div><h3>Ready to focus better</h3><br>
+            <small>This template instantly leveled up our presence.” – Studio Vertex</small>
+            <br>
+            <br>
+            <button>Get Started Free</button>
+        </div>
+            <div><img src="./Assets/wc-big.png" alt=""></div>
+
+        </div>
+        <div>
+            <h1 style="text-align: left;">Let’s Get in <br> Touch</h1>
+            <div >
+                
+                <input  type="email" placeholder="example@email.com" name="" id="">Email
+                <input placeholder="full name" type="name" name="" id="">Name
+                <input placeholder="write your message...." type="text" name="" id="">Message
+            </div>
+        </div>
 
     </main>
     <footer style="background-color: #FFFFFF;">
