added main section

--- a/index.html
+++ b/index.html
@@ -21,16 +21,27 @@
 
     </header>
 
-    <main class="mainsection">
-        <div class="leftsection">
+    <main >
+        <section class="leftsection">
             <h2 style="color: #252432;" class="see">See It in Action</h2><br>
             <p style="color: #252432 51%;">Explore the live preview and imagine your <br> brand in this bold new look.</p><br>
             <button>
                 Lunch Live preview
             </button>
 
-        </div>
         <img class="rightsection" src="./Assets/wc-mini.png" alt="">
+            
+        </section>
+         <section class="parent div">
+            <h2 style="font-size: 42px;">Joined Thousands of Productive Users</h2>
+            <ul class="fontsize">
+                <li> 50K</li>
+                <li>2M+</li>
+                <li>95%</li>
+            </ul></section>
+
+
+        
 
     </main>
     <footer>
