added full index

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                 <button>Get Started Free</button>
                 </div>
-                <img src="./Assets/wc-big.png" alt="">
+                <img class="image" src="./Assets/wc-big.png" alt="">
             </section>
             <section>
                 <div style="text-align: left;">
